--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/1.view-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/1.view-locality.md
@@ -8,19 +8,19 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-   ```sql
+   ```shell
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-   ```sql
+   ```shell
    obclient>use oceanbase;
    ```
 
 3. 查询 `oceanbase.DBA_OB_TENANTS`，获取租户的副本类型及分布。
 
-   ```sql
+   ```shell
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
    +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
    | TENANT_ID | TENANT_NAME | TENANT_TYPE | PRIMARY_ZONE                           | LOCALITY                                                         |
@@ -50,7 +50,3 @@
 * [修改 Locality](2.modify-locality.md)
 
 * [增加副本](3.add-replica.md)
-
-* []()
-
-* []()
