--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/3.add-replica.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/3.add-replica.md
@@ -33,19 +33,19 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-   ```sql
+   ```shell
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-   ```sql
+   ```shell
    obclient>use oceanbase;
    ```
 
 3. 查看租户 `mysql001` 修改前的 Locality。
 
-   ```sql
+   ```shell
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
    +-----------+-------------+-------------+-------------------+---------------------------------------------+
    | TENANT_ID | TENANT_NAME | TENANT_TYPE | PRIMARY_ZONE      | LOCALITY                                    |
@@ -59,13 +59,13 @@
 
 4. 修改租户 `mysql001` 的 Locality。
 
-   ```sql
+   ```shell
    obclient>ALTER TENANT mysql001 locality="FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3";
    ```
 
 5. 查看 Locality 变更任务的执行状态。
 
-   ```sql
+   ```shell
     obclient>SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY';
     +--------+-----------------------+------------+-------------+----------+----------------------------+----------------------------+-----------+------------------------------------------------------------------------------+---------------------------------------------+----------------+-------------+
     | JOB_ID | JOB_TYPE              | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | SQL_TEXT                                                                     | EXTRA_INFO                                  | RS_SVR_IP      | RS_SVR_PORT |
@@ -78,7 +78,7 @@
 
 6. 查看租户 `mysql001` 修改后的 Locality。
 
-   ```sql
+   ```shell
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
    +-----------+-------------+-------------+-------------------+---------------------------------------------+
    | TENANT_ID | TENANT_NAME | TENANT_TYPE | PRIMARY_ZONE      | LOCALITY                                    |
