--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.adjust-replica-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.adjust-replica-distribution.md
@@ -28,19 +28,19 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-   ```sql
+   ```shell
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-   ```sql
+   ```shell
    obclient>use oceanbase; 
    ```
 
 3. 查看租户 `mysql001` 修改前的 Locality。
 
-   ```sql
+   ```shell
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
    +-----------+-------------+-------------+-------------------+---------------------------------------------+
    | TENANT_ID | TENANT_NAME | TENANT_TYPE | PRIMARY_ZONE      | LOCALITY                                    |
@@ -54,13 +54,13 @@
 
 4. 修改租户 `mysql001` 的 Locality，增加一个 zone4 的副本。
 
-   ```sql
+   ```shell
    obclient>ALTER TENANT mysql001 locality="FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3, FULL{1}@zone4";
    ```
 
 5. 查看 Locality 变更任务的执行状态。
 
-   ```sql
+   ```shell
     obclient>SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY';
     +--------+-----------------------+------------+-------------+----------+----------------------------+----------------------------+-----------+------------------------------------------------------------------------------+---------------------------------------------+----------------+-------------+
     | JOB_ID | JOB_TYPE              | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | SQL_TEXT                                                                     | EXTRA_INFO                                  | RS_SVR_IP      | RS_SVR_PORT |
@@ -73,13 +73,13 @@
 
 6. 修改租户 `mysql001` 的 Locality，减少 zone3 的副本。
 
-   ```sql
+   ```shell
    obclient>ALTER TENANT mysql001 locality="FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone4";
    ```
 
 7. 查看 Locality 变更任务的执行状态。
 
-   ```sql
+   ```shell
     obclient>SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY';
     +--------+-----------------------+------------+-------------+----------+----------------------------+----------------------------+-----------+------------------------------------------------------------------------------+---------------------------------------------+----------------+-------------+
     | JOB_ID | JOB_TYPE              | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | SQL_TEXT                                                                     | EXTRA_INFO                                  | RS_SVR_IP      | RS_SVR_PORT |
@@ -92,7 +92,7 @@
 
 8. 查看租户 `mysql001` 修改后的 Locality。
 
-   ```sql
+   ```shell
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
    +-----------+-------------+-------------+-------------------+---------------------------------------------+
    | TENANT_ID | TENANT_NAME | TENANT_TYPE | PRIMARY_ZONE      | LOCALITY                                    |
@@ -105,7 +105,7 @@
 
 通过步骤 3 与步骤 8 的查询比较， 租户 `mysql001` 的 Locality 由原来的 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 变为 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone4` ，租户 `mysql001` 在 zone1、zone2、zone4 上分别有一个全能型副本。
 
-在步骤 4 执行过后，增加副本会导致租户 Locality 与租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone，关于修改 Primary Zone 的操作，参见 [调整 Primary Zone](../../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
+在步骤 4 执行过后，增加副本会导致租户 Locality 与租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone，关于修改 Primary Zone 的操作，参见 [调整 Primary Zone](pr 合并后添加)；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
 
 ## 相关文档
 
@@ -119,4 +119,4 @@
 
 * [减少副本](4.reduce-replicas.md)
 
-* [调整 Primary Zone](../../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)
+* [调整 Primary Zone](pr 合并后添加)
