--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/7.replica-migration.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/7.replica-migration.md
@@ -8,19 +8,19 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
+    ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-    ```sql
+    ```shell
     obclient>use oceanbase;
     ```
 
 3. 查询租户 `mq_t1` 的 `tenant_id`。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
     | TENANT_ID | TENANT_NAME | TENANT_TYPE | CREATE_TIME                | MODIFY_TIME                | PRIMARY_ZONE                           | LOCALITY                                                         | PREVIOUS_LOCALITY | COMPATIBILITY_MODE | STATUS | IN_RECYCLEBIN | LOCKED |
@@ -33,7 +33,7 @@
 
 4. 查看对应租户 `mq_t1` 的 Unit 信息。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_ID | TENANT_ID | STATUS | RESOURCE_POOL_ID | UNIT_GROUP_ID | CREATE_TIME                | MODIFY_TIME                | ZONE         | SVR_IP     | SVR_PORT | MIGRATE_FROM_SVR_IP | MIGRATE_FROM_SVR_PORT | MANUAL_MIGRATE | UNIT_CONFIG_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -45,9 +45,9 @@
     3 rows in set
     ```
 
-5. 查看 OBServer 中各种 Zone 所对应的服务器 IP。
+5. 查看 OBServer 节点中各种 Zone 所对应的服务器 IP。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_SERVERS;
     +-------------+----------+----+--------------+----------+-----------------+--------+----------------------------+-----------+-----------------------+----------------------------+----------------------------+-------------------------------------------------------------------------------------------+
     | SVR_IP      | SVR_PORT | ID | ZONE         | SQL_PORT | WITH_ROOTSERVER | STATUS | START_SERVICE_TIME         | STOP_TIME | BLOCK_MIGRATE_IN_TIME | CREATE_TIME                | MODIFY_TIME                | BUILD_VERSION                                                                             |
@@ -64,14 +64,14 @@
 
 6. 将租户 `mq_t1` 中 `UNIT_ID = 1006` 的 Unit 迁移到同 Zone 的另一个节点。
 
-    ```sql
+    ```shell
     obclient> ALTER SYSTEM migrate unit = 1006 destination = 'xx.xx.xx.158:2882';
     Query OK, 0 rows affected 
     ```
 
 7. 查看 Unit 迁移状态。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNIT_JOBS WHERE JOB_TYPE = 'MIGRATE_UNIT';
     +--------+--------------+------------+-------------+----------+----------------------------+----------------------------+-----------+---------+----------+------------+------------+-------------+
     | JOB_ID | JOB_TYPE     | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | UNIT_ID | SQL_TEXT | EXTRA_INFO | RS_SVR_IP  | RS_SVR_PORT |
@@ -85,7 +85,7 @@
 
 8. 查看 Unit 迁移后的信息。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE UNIT_ID = 1006;
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+-------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_ID | TENANT_ID | STATUS | RESOURCE_POOL_ID | UNIT_GROUP_ID | CREATE_TIME                | MODIFY_TIME                | ZONE         | SVR_IP      | SVR_PORT | MIGRATE_FROM_SVR_IP | MIGRATE_FROM_SVR_PORT | MANUAL_MIGRATE | UNIT_CONFIG_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
