--- a/zh-CN/6.manage/3.replica-management/4.log-stream/4.log-stream.md
+++ b/zh-CN/6.manage/3.replica-management/4.log-stream/4.log-stream.md
@@ -20,11 +20,11 @@ RedoLog 是基于 Paxos 协议实现的日志模块，TxCrMgr 是事务管理结
 
 * 通过视图 `oceanbase.DBA_OB_LS` 查看本租户所有日志流的基本信息，包括状态、日志进度等。
 
-    有关 `oceanbase.DBA_OB_LS` 视图的详细信息，参见 [oceanbase.DBA_OB_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/176.oceanbase-dba_ob_ls-of-mysql-mode.md)
+    有关 `oceanbase.DBA_OB_LS` 视图的详细信息，参见 [oceanbase.DBA_OB_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/176.oceanbase-dba_ob_ls-of-mysql-mode.md)。
 
     示例如下：
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_LS limit 10;
     +-------+--------+----------------------------------------+---------------+-------------+------------+----------+----------+--------------+
     | LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN | DROP_SCN | SYNC_SCN | READABLE_SCN |
@@ -47,8 +47,7 @@ RedoLog 是基于 Paxos 协议实现的日志模块，TxCrMgr 是事务管理结
 
     以查询租户 mq_t1 的日志流信息为例。
 
-    ```sql
-
+    ```shell
     --查询租户 mq_t1 的基本信息。
 
     obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_ID=1004;
@@ -87,11 +86,11 @@ RedoLog 是基于 Paxos 协议实现的日志模块，TxCrMgr 是事务管理结
 
 * `oceanbase.DBA_OB_TABLET_TO_LS` 视图维护了 Tablet 到日志流的映射关系，从而获取 Tablet 位置信息。
 
-    有关 `oceanbase.DBA_OB_TABLET_TO_LS` 视图的详细信息，参见 [oceanbase.DBA_OB_TABLET_TO_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/56.oceanbase-dba_ob_tablet_to_ls-of-mysql-mode.md)
+    有关 `oceanbase.DBA_OB_TABLET_TO_LS` 视图的详细信息，参见 [oceanbase.DBA_OB_TABLET_TO_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/56.oceanbase-dba_ob_tablet_to_ls-of-mysql-mode.md)。
 
     示例如下：
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_TABLET_TO_LS limit 10;
     +-----------+-------+
     | TABLET_ID | LS_ID |
