--- a/zh-CN/6.manage/3.replica-management/4.log-stream/5.unit-group.md
+++ b/zh-CN/6.manage/3.replica-management/4.log-stream/5.unit-group.md
@@ -16,11 +16,11 @@ OceanBase 4.0 开始在租户资源管理上增加了限制，要求同一个租
 
 所有的 Unit，及其所属 Unit Group 可通过视图 `oceanbase.DBA_OB_UNITS` 查询。
 
-有关 `oceanbase.DBA_OB_UNITS` 视图的详细信息，参见 [oceanbase.DBA_OB_UNITS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/61.oceanbase-dba_ob_units-of-mysql-mode.md)
+有关 `oceanbase.DBA_OB_UNITS` 视图的详细信息，参见 [oceanbase.DBA_OB_UNITS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/61.oceanbase-dba_ob_units-of-mysql-mode.md)。
 
 示例如下：
 
-```sql
+```shell
 obcllient> SELECT UNIT_ID,TENANT_ID,UNIT_GROUP_ID,ZONE,SVR_IP,SVR_PORT FROM DBA_OB_UNITS WHERE TENANT_ID = 1004;
 +---------+-----------+---------------+--------------+------------+----------+
 | UNIT_ID | TENANT_ID | UNIT_GROUP_ID | ZONE         | SVR_IP     | SVR_PORT |
