--- a/zh-CN/6.manage/3.replica-management/4.log-stream/6.ls-group.md
+++ b/zh-CN/6.manage/3.replica-management/4.log-stream/6.ls-group.md
@@ -16,11 +16,11 @@
 
 日志流及其所归属的日志流组可通过视图 `oceanbase.CDB_OB_LS` 查看。
 
-有关 `oceanbase.CDB_OB_LS` 视图的详细信息，参见 [oceanbase.CDB_OB_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/175.oceanbase-cdb_ob_ls-of-mysql-mode.md)
+有关 `oceanbase.CDB_OB_LS` 视图的详细信息，参见 [oceanbase.CDB_OB_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/175.oceanbase-cdb_ob_ls-of-mysql-mode.md)。
 
 示例如下：
 
-```sql
+```shell
 obcllient> select TENANT_ID,LS_ID,STATUS,PRIMARY_ZONE,UNIT_GROUP_ID,LS_GROUP_ID FROM oceanbase.CDB_OB_LS where TENANT_ID=1004;
 +-----------+-------+--------+----------------------------------------+---------------+-------------+
 | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID |
