--- a/zh-CN/6.manage/3.replica-management/4.log-stream/7.summary.md
+++ b/zh-CN/6.manage/3.replica-management/4.log-stream/7.summary.md
@@ -16,8 +16,8 @@
 
 OceanBase 数据库从多个层面将数据和流量灵活分布于多个节点上：
 
-* Unit 可以在节点之间迁移以实现节点均衡，Unit 在节点之间迁移的详细信息参见 [副本迁移](../2.replica-distribution/2.common-operations/7.replica-migration.md)；
+* Unit 可以在节点之间迁移以实现节点均衡，Unit 在节点之间迁移的详细信息参见 [副本迁移](../2.replica-distribution/2.common-operations/7.replica-migration.md)。
 
-* 日志流可以通过分裂和合并以实现租户的扩缩容，详细信息参见 [通过调整 Unit Number 实现租户扩缩容](../5.tenant-expansion-and-contraction/3.adjust-unit-number.md)和 [调整 Primary Zone](../5.tenant-expansion-and-contraction/4.adjust-primary-zone.md)；
+* 日志流可以通过分裂和合并以实现租户的扩缩容，详细信息参见 [通过调整 Unit Number 实现租户扩缩容](pr 合并后加链接)和 [调整 Primary Zone](pr 合并后加链接)。
 
 * Tablet 可以在日志流之间迁移以实现日志流的分区均衡。
