--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/6.view-the-location-change-record.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/6.view-the-location-change-record.md
@@ -8,11 +8,11 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-   ```sql
+   ```shell
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
    ```sql
    obclient>USE oceanbase;
@@ -22,7 +22,7 @@
 
    * 查看 Locality 变更任务的执行状态。
 
-     ```sql
+     ```shell
         obclient> SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY';
         +--------+-----------------------+------------+-------------+----------+----------------------------+----------------------------+-----------+------------------------------------------------------------------------------+---------------------------------------------+----------------+-------------+
         | JOB_ID | JOB_TYPE              | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | SQL_TEXT                                                                     | EXTRA_INFO                                  | RS_SVR_IP      | RS_SVR_PORT |
@@ -36,7 +36,7 @@
 
    * 查看某一租户上的历史 Locality 变更记录。
 
-     ```sql
+     ```shell
         obclient [oceanbase]> SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY' AND tenant_id = 1002 ORDER BY START_TIME DESC LIMIT 10;
         +--------+-----------------------+------------+-------------+----------+----------------------------+----------------------------+-----------+------------------------------------------------------------------------------+---------------------------------------------+----------------+-------------+
         | JOB_ID | JOB_TYPE              | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | SQL_TEXT                                                                     | EXTRA_INFO                                  | RS_SVR_IP      | RS_SVR_PORT |
