--- a/zh-CN/6.manage/3.replica-management/4.log-stream/3.tablet.md
+++ b/zh-CN/6.manage/3.replica-management/4.log-stream/3.tablet.md
@@ -14,11 +14,11 @@ Tablet 与分区一一对应，分区作为用户创建的逻辑对象，而 Tab
 
 所有的分片对象的基本信息可通过视图 `oceanbase.DBA_OB_TABLET_REPLICAS` 查看。
 
-有关 `oceanbase.DBA_OB_TABLET_REPLICAS` 视图的详细信息，参见 [oceanbase.DBA_OB_TABLET_REPLICAS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/55.oceanbase-dba_ob_tablet_replicas-of-mysql-mode.md)
+有关 `oceanbase.DBA_OB_TABLET_REPLICAS` 视图的详细信息，参见 [oceanbase.DBA_OB_TABLET_REPLICAS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/55.oceanbase-dba_ob_tablet_replicas-of-mysql-mode.md)。
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT * FROM oceanbase.DBA_OB_TABLET_REPLICAS LIMIT 10;
 +----------------------------+----------------------------+-----------+---------------+----------+-------+---------------------+-----------+---------------+
 | CREATE_TIME                | MODIFY_TIME                | TABLET_ID | SVR_IP        | SVR_PORT | LS_ID | COMPACTION_SCN      | DATA_SIZE | REQUIRED_SIZE |
