--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
@@ -17,12 +17,18 @@ OceanBase 数据库 MySQL 模式下，用户可以通过设置一系列系统变
 
 ## 设置密码的复杂度
 
-本节以设置密码复杂度规则为最小长度为 8 个字符，至少包含 3 个大写字母、3 个小写字母和 1 个特殊字符、用户密码可以与用户名相同并且检查策略为 `medium` 为例，提供设置密码复杂度的操作指导。
+<main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>生产环境建议设置密码长度为 20 位，包括数字、大写字母、小写字母以及特殊字符。密码的复杂度越低，其被破解的可能性就越大，比如包含用户名、使用重复字符等。出于安全性考虑，需确保用户的密码具有较高的复杂度。
+    </li></p>
+  </main>
+
+本节以设置密码复杂度规则为最小长度为 8 个字符，至少包含 3 个大写字母、3 个小写字母和 1 个特殊字符、用户密码不可以与用户名相同并且检查策略为 `medium` 为例，提供设置密码复杂度的操作指导。
 
 1. 使用 root 用户登录集群的 MySQL 租户。
 
     ```shell
-    $obclient -uroot@mysql -P2881 -h10.xxx.xxx.1 -p***1***
+    obclient -uroot@mysql -P2881 -h10.xxx.xxx.1 -p***1***
     ```
 
 2. 通过系统变量设置密码的复杂度。
@@ -54,7 +60,7 @@ OceanBase 数据库 MySQL 模式下，用户可以通过设置一系列系统变
     ```
 
 4. 验证密码复杂度。
-    
+
     创建两个用户，分别设置为符合要求的密码和不符合要求的密码。
 
     ```shell
