--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
@@ -31,10 +31,10 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
 1. 使用 root 用户登录到集群的 MySQL 租户。
 
    ```shell
-   $obclient -uroot@mysql -h127.1 -P2881 -p****1***
+   obclient -uroot@mysql -h127.1 -P2881 -p****1***
    ```
 
-2. 执行以下语句，修改配置项 `connection_control_failed_connections_threshold`、`connection_control_min_connection_delay` 与 `connection_control_max_connection_delay` 的值。
+2. 执行以下语句，设置用户的错误登录次数为 5 次。指定了超过错误登录次数之后，错误登录锁定的最小时长为 60000 毫秒，错误登录锁定的最大时长为 360000 毫秒。
 
    示例如下：
 
@@ -48,12 +48,10 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
 
    配置项相关的详细设置及说明请参见 [修改集群参数](../../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md)。
 
-3. 创建用户并授权。
+3. 创建登录用户。
 
    ```shell
-   obclient> CREATE USER 'test' IDENTIFIED BY '123';
-   Query OK, 0 rows affected (0.04 sec)
-   obclient> GRANT all  ON *.* TO test;
+   obclient> CREATE USER 'test' IDENTIFIED BY '***1***';
    Query OK, 0 rows affected (0.04 sec)
     ```
 
@@ -80,11 +78,12 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
 
 5. 执行以下 SQL 语句，解锁用户。
 
-   >**注意**
-   >
-   >解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 `ALTER USER` 权限。关于查看用户权限和授权的相关操作，参见 [查看用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md) 和 [修改用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+   <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md">查看用户权限</a>  和 <a href="../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md">修改用户权限</a></p>
+   </main>
 
-   ```shell
-   obclient> ALTER USER test ACCOUNT UNLOCK;
-   Query OK, 0 rows affected (0.03 sec)
-   ```
+      ```shell
+         obclient> ALTER USER test ACCOUNT UNLOCK;
+         Query OK, 0 rows affected (0.03 sec)
+      ```
