--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -105,7 +105,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 1. 使用 sys 用户登录集群的 Oracle 租户。
 
     ```shell
-    $obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
+    obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
     ```
 
 2. 创建 Profile 并设置连续错误登录策略。
@@ -172,7 +172,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
    <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../2.oracle-3/4.view-user-permissions.md">查看用户权限</a> 和<a href="../2.oracle-3/5.modify-user-permissions-1.md">修改用户权限</a>
+    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../2.oracle-3/4.view-user-permissions.md">查看用户权限</a> 和<a href="../2.oracle-3/5.modify-user-permissions-1.md">修改用户权限</a>。
     </main>
 
    ```shell
