--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/3.delegation-of-authority-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/3.delegation-of-authority-of-oracle-mode.md
@@ -7,55 +7,55 @@
 1. 使用 sys 用户登录集群的 Oracle 租户，并创建 A，B，C 三个用户并分别授予 `CREATE SESSION` 系统权限，单独授予 A 用户 `GRANT ANY PRIVILEGE` 权限。
 
     ```shell
-    obclient [SYS]> CREATE USER A IDENTIFIED BY **1***;
-    obclient [SYS]> CREATE USER B IDENTIFIED BY **1***;
-    obclient [SYS]> CREATE USER C IDENTIFIED BY **1***;
-    obclient [SYS]> GRANT CREATE SESSION TO A;
-    obclient [SYS]> GRANT CREATE SESSION TO B;
-    obclient [SYS]> GRANT CREATE SESSION TO C;
-    obclient [SYS]> GRANT GRANT ANY PRIVILEGE TO A;
+    obclient > CREATE USER A IDENTIFIED BY **1***;
+    obclient > CREATE USER B IDENTIFIED BY **1***;
+    obclient > CREATE USER C IDENTIFIED BY **1***;
+    obclient > GRANT CREATE SESSION TO A;
+    obclient > GRANT CREATE SESSION TO B;
+    obclient > GRANT CREATE SESSION TO C;
+    obclient > GRANT GRANT ANY PRIVILEGE TO A;
     ```
 
 2. 在 sys 用户下创建表 test。
 
     ```shell
-    obclient [A]> CREATE TABLE test (id number(10),name varchar2(10));
+    obclient > CREATE TABLE test (id number(10),name varchar2(10));
     Query OK, 0 rows affected (0.050 sec)
     ```
 
 3. 授予 A 用户查询 sys 用户下表 test 的权限。
 
     ```shell
-    obclient [SYS]> GRANT SELECT ON sys.test TO A;
+    obclient > GRANT SELECT ON sys.test TO A;
     ```
 
 4. 登录 A 用户，授予 B 用户查询 test 表权限，并带上 `with grant option` 可以让 B 用户在进行授权。
 
     ```shell
-    obclient [A]> GRANT SELECT ON sys.test TO B with grant option;
+    obclient > GRANT SELECT ON sys.test TO B with grant option;
     ```
 
 5. 切换到 B 用户，发现可以查询 test 表。
 
     ```shell
-    obclient [B]> SELECT * FROM sys.test
+    obclient > SELECT * FROM sys.test
     ```
 
 6. 登录 B 用户，把查询 test 表的权限授予 C 用户。
 
     ```shell
-    obclient [B]> GRANT SELECT ON sys.test TO C ;
+    obclient > GRANT SELECT ON sys.test TO C ;
     ```
 
 7. 切换到 C 用户，发现可以查询 test 表，权限转授成功。
 
     ```shell
-    obclient [C]> SELECT * FROM sys.test；
+    obclient > SELECT * FROM sys.test；
     ```
 
 如果在给 A 用户授权时没有带 `with grant option` 参数，则使用 A 用户对 C 用户转授相同权限时会提示如下报错：
 
 ```shell
-obclient [A]> GRANT SELECT on sys.test TO C ;
+obclient > GRANT SELECT on sys.test TO C ;
 ORA-01031: insufficient privileges
 ```
