--- a/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/3.data-storage-encryption-of-oracle-mode/3.unencrypt-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/3.data-storage-encryption-of-oracle-mode/3.unencrypt-of-oracle-mode.md
@@ -75,5 +75,5 @@ obclient> SHOW CREATE TABLE t1;
 
 ## 相关文档
 
-* [为新创建的表设置存储加密](1.configure-internal-storage-encryption-of-oracle-mode.md)
-* [为已有表设置存储加密](2.set-storage-encryption-for-existing-tables-of-oracle-mode.md)
+* [为新创建的表设置透明加密](1.configure-internal-storage-encryption-of-oracle-mode.md)
+* [为已有表设置透明加密](2.set-storage-encryption-for-existing-tables-of-oracle-mode.md)
