--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/1.security-audit-overview.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/1.security-audit-overview.md
@@ -26,7 +26,7 @@
 
 1. 检查对当前用户是否进行审计，根据租户、用户名、配置项综合判断。
 
-2. 解析 SQL 语句中可被审计的操作，一条 SQL 语句可以包含多个不同的操作，例如 insert into t1 select * from t2, t3 中包含了 (insert, t1), (select, t2), (select t3) 3 个操作。
+2. 解析 SQL 语句中可被审计的操作，一条 SQL 语句可以包含多个不同的操作，例如 `insert into t1 select * from t2`, t3 中包含了 `(insert, t1)`、 `(select, t2)`、`(select t3)` 3 个操作。
 
 3. 对每个操作单独判断是否命中任意一条审计规则。
 
