--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/2.audit-open.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/2.audit-open.md
@@ -2,48 +2,50 @@
 
 本章节介绍如何开启审计功能并设置审计记录的存储位置。
 
-OceanBase 数据库的审计相关操作一般由内置的 ORAAUDITOR 用户进行，该用户密码固定为 ORAAUDITOR。
+OceanBase 数据库的审计相关操作一般由内置的 `ORAAUDITOR` 用户进行，该用户密码固定为 `ORAAUDITOR`。
+
+<!-->需要修改密码<-->
 
 ## 操作步骤
 
 1. 使用 `sys` 用户登录到 `Oracle` 租户解锁 `ORAAUDITOR` 用户。
 
-   ```sql
+   ```shell
    obclient> ALTER USER ORAAUDITOR ACCOUNT UNLOCK;
    ```
 
    <main id="notice" type='explain'>
-      <h4>说明</h4>
-      <p>OceanBase 数据库默认创建了 <code>ORAAUDITOR</code> 用户。该用户默认处于锁定状态，在使用审计前需要启用该用户。</p>
-   </main>
+      <h4>说明</h4>
+      <p>OceanBase 数据库默认创建了 <code>ORAAUDITOR</code> 用户。该用户默认处于锁定状态，在使用审计前需要启用该用户。</p>
+      </main>
 
    为了便于 `ORAAUDITOR` 用户直接修改相关配置项的值，可通过 `GRANT` 语句给 `ORAAUDITOR` 用户授予 `ALTER SYSTEM` 权限。
 
-   ```sql
+   ```shell
    obclient> GRANT ALTER SYSTEM TO ORAAUDITOR;
    ```
 
-2. 使用 `ORAAUDITOR` 用户登录到 `Oracle` 租户。
+2. 使用 `ORAAUDITOR` 用户登录到 Oracle 租户。
 
 3. 启用审计功能并设置审计记录的存储位置。
 
    通过配置项 `audit_trail` 开启审计功能，执行成功后立即生效。该配置项的取值如下：
 
-   * NONE：关闭审计，为默认值。
+   * `NONE`：关闭审计，为默认值。
 
-   * OS：审计记录写入本地磁盘文件。
+   * `OS`：审计记录写入本地磁盘文件。
 
-   * DB：审计记录写入内部表。
+   * `DB`：审计记录写入内部表。
 
-   * DB,EXTENDED / DB_EXTENDED：审计记录写入内部表且记录包含执行的 SQL 语句。
+   * `DB,EXTENDED / DB_EXTENDED`：审计记录写入内部表且记录包含执行的 SQL 语句。
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient> ALTER SYSTEM SET audit_trail = 'DB,EXTENDED';
    ```
 
-   关于 `audit_trail` 配置项的详细信息，参见 [audit_trail](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/2.audit_trail.md) 。
+   关于 `audit_trail` 配置项的详细信息，参见 [audit_trail](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/2.audit_trail.md)。
 
    <main id="notice" type='explain'>
       <h4>说明</h4>
