--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/3.set-up-and-view-audit-rules.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/3.set-up-and-view-audit-rules.md
@@ -1,4 +1,25 @@
-# 查看审计规则
+# 设置和查看审计规则
+
+开启安全审计后，需要设置具体的安全审计规则来对用户的操作进行审计。
+
+## 设置审计规则
+
+通过内置的审计管理用户 `ORAAUDITOR` 可以配置审计规则，包括：
+
+* 语句审计：对特定的操作进行审计，不指定具体对象，可以指定对具体用户或对所有用户生效。
+* 对象审计：对特定的对象上执行的特定操作进行审计，可以指定对具体用户或对所有用户生效。
+
+审计规则是通过 DDL 语句 `audit/noaudit` 语句来配置，审计规则也是一种 schema 对象。
+
+有关设置审计规则的详细信息，请参见 [AUDIT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/2.audit-of-oracle-mode.md)。
+
+例如，对用户 `user1` 的表 `tbl1` 的所有 INSERT、UPDATE 和 DELETE 操作进行审计：
+
+```shell
+obclient> AUDIT INSERT,UPDATE,DELETE ON user1.tbl1;
+```
+
+## 查看审计规则
 
 设置审计规则后，您可以通过一系列 Oracle 兼容的数据字典视图查看审计规则的信息。
 
@@ -11,7 +32,7 @@
 
 查看 `ALL_DEF_AUDIT_OPTS` 中的审计规则。示例如下：
 
-```sql
+```shell
 obclient> SELECT * FROM SYS.ALL_DEF_AUDIT_OPTS;
 ```
 
@@ -20,5 +41,5 @@ obclient> SELECT * FROM SYS.ALL_DEF_AUDIT_OPTS;
 有关安全审计的更多相关操作，参见：
 
 * [开启安全审计](2.audit-open.md)
-* [设置审计规则](3.set-up-audit-rules.md)
-* [查看审计记录](5.audit-process.md)
+* [查看审计记录](5.audit-records.md)
+
