--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/2.authority-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/2.authority-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 您可以通过 `GRANT` 语句授予用户用户级权限、数据库级权限或对象权限。
 
-### 前提条件
+## 前提条件
 
 当前用户必须拥有被授予的权限（例如，`test1` 把表 `t1` 的 `SELECT` 权限授予 `test2`，则 `test1` 必须拥有表 `t1` 的 `SELECT` 的权限），并且拥有 `GRANT OPTION`权限，才能授予成功。
 
