--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
@@ -6,7 +6,7 @@
 
 * 权限转授失败示例
 
-   1. 使用 root 用户登录集群的 Mysql 租户。
+   1. 使用 root 用户登录集群的 MySQL 租户。
 
    2. 创建用户 A 并授权，但是不加 `with grant option` 参数。
 
@@ -22,12 +22,13 @@
       ERROR 1227 (42501): Access denied; you need (at least one of) the GRANT privilege(s) for this operation
       ```
 
-      >**说明**
-      >
-      >为用户授权时不带 `with grant option` 参数，则它的权限不可以传递授予其它用户。
- 
+      <main id="notice" type='alert'>
+         <h4>注意</h4>
+         <p>为用户授权时不带这 <code>with grant option</code> 参数，则它的权限不可以传递授予其它用户</p>
+      </main>
+
 * 权限转授成功示例
-   1. 使用 root 用户登录集群的 Mysql 租户。
+   1. 使用 root 用户登录集群的 MySQL 租户。
 
    2. 为 A 用户授权，添加 `with grant option` 参数。示例如下。
 
