--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/2.authority-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/2.authority-of-oracle-mode.md
@@ -7,7 +7,7 @@
 * 创建视图时，访问视图中的对象所需的权限。
 * 执行定义者权限的有名 PL 块中的语句所需的权限。
 
-### 前提条件
+## 前提条件
 
 * 当授予对象权限时，当前用户必须是对象的所有者，或者拥有被授予的权限（例如，`test1` 把表 `t1` 的 `SELECT` 权限授予 `test2`，则 `test1` 必须拥有表 `t1` 的 `SELECT` 的权限），并且拥有 `GRANT OPTION` 权限，或者拥有 `GRANT ANY OBJECT PRIVILEGE` 权限，才能授予成功。
 
