根据炎风的修改方案修改

--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/6.restore-data/2.initiate-the-tenant-restore.md
@@ -30,7 +30,17 @@
    obclient [(none)]> SET DECRYPTION IDENTIFIED BY '******','******'；
    ```
 
-3. 执行以下语句，开始执行恢复任务。
+3. （可选）如果需要加快恢复，可以配置项 `restore_concurrency` 适当调整恢复任务的并发度。
+
+   集群级配置项 `restore_concurrency` 用于设置从备份恢复租户数据时的最大并发度。默认值为 0，取值范围为 [0, 512]。有关配置项 `restore_concurrency` 的更多介绍，请参见 [restore_concurrency](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/170.restore_concurrency.md)。
+
+   语句示例如下：
+
+   ```sql
+   obclient [(none)]> ALTER SYSTEM SET restore_concurrency = 20;
+   ```
+
+4. 执行以下语句，开始执行恢复任务。
 
    语句如下：
 
@@ -106,15 +116,31 @@
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'oss://oceanbase-test-bucket/backup/data/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx,oss://oceanbase-test-bucket/backup/archive/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx' UNTIL TIME='2022-06-1 00:00:00' WITH 'pool_list=restore_pool';
          ```
 
-4. 配置恢复任务的后台调度权重，以免影响恢复的速度。
+5. （可选）在待恢复租户对应的 Meta 租户创建成功后，如果需要加速恢复，可以通过配置项 `ha_low_thread_score` 配置恢复任务的后台调度权重。
 
-   租户级配置项 `ha_low_thread_score` 用于设置高可用低优先级线程的当前工作线程数。默认值为 0，取值范围为 [0, 100]，建议修改为 10。有关配置项 `ha_low_thread_score` 的更多介绍，请参见 [ha_low_thread_score](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/43.ha_low_thread_score.md)。
+   1. 通过 `oceanbase.DBA_OB_TENANTS` 视图查看待恢复租户对应的 Meta 租户是否创建成功。
 
-   语句如下：
+      语句如下：
 
-   ```sql
-   obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
-   ```
+      ```sql
+      obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_TENANTS;
+      ```
+
+      查询结果中，`TENANT_NAME` 列中以 `META$` 开头的租户即为 Meta 租户，当 Meta 租户的状态为 `TENANT_STATUS_NORMAL` 时，则表示 Meta 租户创建成功。
+
+      更多视图 `oceanbase.DBA_OB_TENANTS` 的字段说明信息请参见 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+
+   2. 设置配置项 `ha_low_thread_score`。
+
+      集群级配置项 `restore_concurrency` 用于设置从备份恢复租户数据时的最大并发度。默认值为 0，取值范围为 [0, 512]。有关配置项 `restore_concurrency` 的更多介绍，请参见 [restore_concurrency](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/170.restore_concurrency.md)。
+
+      租户级配置项 `ha_low_thread_score` 用于设置高可用低优先级线程的当前工作线程数。默认值为 0，取值范围为 [0, 100]，建议修改为 10。有关配置项 `ha_low_thread_score` 的更多介绍，请参见 [ha_low_thread_score](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/43.ha_low_thread_score.md)。
+
+      语句示例如下：
+
+      ```sql
+      obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
+      ```
 
 ## 后续操作
 
