400ofuse登录租户格式修改

--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -47,7 +47,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
 2. 安装 Antman。
 
-   使用 root 用户登录该机器，执行以下命令，安装 Antman。
+   使用 `root` 用户登录该机器，执行以下命令，安装 Antman。
 
    ```shell
    [root@hostname /]# rpm -ivh t-oceanbase-antman-x.x.x-xxxxxxxxxxxx.alios7.x86_64.rpm
