--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
@@ -380,7 +380,7 @@ create table bmsql_stock (
 
 ### 创建索引
 
-当数据初始化完成后，登录到 test 租户，在 `tpccdb` 中补充创建如下两个索引。
+当数据初始化完成后，登录到集群的 `test` 租户，在 `tpccdb` 中补充创建如下两个索引。
 
 ```sql
 [root@obce-0000 run]# cat sql.common/indexCreates.sql
