--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/2.experience-the-hot-row-update-capability-of-oceanbase-database.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/2.experience-the-hot-row-update-capability-of-oceanbase-database.md
@@ -103,7 +103,7 @@ TPS on Hot Row: 1834.86 /s
 
 ## 步骤四：打开 OceanBase 数据库 ELR 配置
 
-接下来我们开启 OceanBase 数据库的热点行功能，首先需要登录到 `sys` 管理员租户。
+接下来我们开启 OceanBase 数据库的热点行功能，首先需要使用 `root` 用户登录集群的 `sys` 租户。
 
 ```shell
 [root@obce00 ~]# obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p -c
