--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
@@ -374,10 +374,10 @@ use $db_name;
 
 3. 加载数据。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>加载数据需要安装 OBClient 客户端。</p>
-  </main>
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p>加载数据需要安装 OBClient 客户端。</p>
+   </main>
 
    ```python
    $ python load.py
@@ -396,10 +396,10 @@ use $db_name;
 
    Major 合并将当前大版本的 SSTable 和 MemTable 与前一个大版本的全量静态数据进行合并，使存储层统计信息更准确，生成的执行计划更稳定。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>执行合并需要使用 <code>sys</code> 租户登录。</p>
-  </main>
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p>执行合并需要使用 <code>root</code> 用户登录 OceanBase 集群的 sys 租户。</p>
+   </main>
 
    ```sql
    MySQL [(none)]> USE oceanbase
