--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallelly-importing-and-data-compression.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallelly-importing-and-data-compression.md
@@ -186,7 +186,7 @@ load data /*+ parallel(16) */ infile '/home/soft/t_f1.csv' into table t_f1 field
 
 2. 对数据库合并。
 
-   为了查看基线数据的压缩效果，我们使用 `sys` 租户管理员登录，主动触发对数据库进行合并，使增量数据可以和基线数据进行合并与压缩。您可以通过如下的方式手动触发合并。
+   为了查看基线数据的压缩效果，使用 `root` 用户登录集群的 `sys` 租户，主动触发对数据库进行合并，使增量数据可以和基线数据进行合并与压缩。您可以通过如下的方式手动触发合并。
 
     ```sql
     obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p -c
