--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/5.user-password-error-with-error-code-1045-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/6.common-errors-and-solutions-of-oracle-mode/5.user-password-error-with-error-code-1045-of-oracle-mode.md
@@ -17,12 +17,12 @@ ERROR 1045 (42000): Access denied for user 'NY'@'xxx.xxx.xxx.xxx' (using passwor
 
 请参考以下步骤，修改用户密码后，重新登录。
 
-1. 使用管理员用户登录到相应的租户。Oracle 租户默认的管理员用户为 `SYS` 用户。
+1. 使用管理员用户登录到集群相应的租户。Oracle 租户默认的管理员用户为 `SYS` 用户。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行解锁操作，必须具备全局 <code>ALTER USER</code> 权限。</p>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行解锁操作，必须具备全局 <code>ALTER USER</code> 权限。</p>
+   </main>
 
    ```sql
    [admin@k08j13249.eu95sqa /home/admin]
@@ -44,12 +44,12 @@ ERROR 1045 (42000): Access denied for user 'NY'@'xxx.xxx.xxx.xxx' (using passwor
    Query OK, 0 rows affected
    ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 <a href="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/2.set-password-complexity-of-oracle-mode.md">设置密码复杂度</a>。</p>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 <a href="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/2.set-password-complexity-of-oracle-mode.md">设置密码复杂度</a>。</p>
+   </main>
 
-3. 再次使用 `ny` 用户登录。
+3. 再次使用 `ny` 用户登录集群的 `Oracle` 租户。
 
    ```sql
    [admin@k08j13249.eu95sqa /home/admin]
