--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
@@ -38,7 +38,7 @@ Query OK, 0 rows affected
 
 内存配置步骤如下：
 
-1. 登录 OceanBase 集群的 sys 租户管理员账号，执行以下 SQL 语句，确认当前租户使用的 `UNIT_CONFIG NAME`。
+1. 使用 `root` 用户登录 OceanBase 集群的 sys 租户，执行以下 SQL 语句，确认当前租户使用的 `UNIT_CONFIG NAME`。
 
    ```sql
    obclient> SELECT NAME FROM DBA_OB_UNIT_CONFIGS;
@@ -76,7 +76,7 @@ Query OK, 0 rows affected
 
 当内存不足时，可以调高 `memstore_limit_percentage` 的取值，并调低 `freeze_trigger_percentage` 的取值，从而达到临时扩容和尽快转储释放的效果。
 
-登录 `sys` 租户管理员账号，调高 `memstore_limit_percentage` 的取值，并调低 `freeze_trigger_percentage` 的取值，示例如下：
+使用 `root` 用户登录 OceanBase 集群的 sys 租户，调高 `memstore_limit_percentage` 的取值，并调低 `freeze_trigger_percentage` 的取值，示例如下：
 
 ```sql
 obclient> ALTER SYSTEM SET freeze_trigger_percentage = 20;
