--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
@@ -79,7 +79,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 
 上述操作确认完成后，您已完成在同一个集群下实现两个租户的创建过程。接下来便可以在租户里正常的进行数据库操作了。
 
-使用新创建的 `tenant1` 进行登录，并创建一张测试表。
+使用 `root` 用户登录集群的 `tenant1` 租户，并创建一张测试表。
 
 ```sql
 obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p
@@ -108,7 +108,7 @@ obclient [test]> SHOW TABLES;
 1 row in set
 ```
 
-使用 `tenant2` 租户进行登录，查看 `test` 库情况。
+使用 `root` 用户登录集群的 `tenant2` 租户，查看 `test` 库情况。
 
 ```sql
 obclient -h***.**.***.106 -P2883 -uroot@tenant2#ob_test -p
