--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
@@ -40,12 +40,12 @@ ERROR 1045 (42000): Access denied for user 'ny1'@'xxx.xxx.xxx.xxx' (using passwo
    Query OK, 0 rows affected
    ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 <a href="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md">设置密码复杂度</a>。</p>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 <a href="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md">设置密码复杂度</a>。</p>
+   </main>
 
-3. 再次使用用户 `ny1` 登录数据库。
+3. 再次使用 `ny1` 用户登录集群的 `MySQL` 租户。
 
    ```sql
    [admin@k08j13249.eu95sqa /home/admin]
