--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/6.deploy-odc-command-line/3.start-deployment.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/6.deploy-odc-command-line/3.start-deployment.md
@@ -6,12 +6,12 @@
 
 ## 操作步骤
 
-1. 以 root 用户登录曾执行过安装 OCP 的服务器。
+1. 以 `root` 用户登录曾执行过安装 OCP 的服务器。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>安装 OCP 时本地生成了相关用户和密码信息。</p>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>安装 OCP 时本地生成了相关用户和密码信息。</p>
+   </main>
 
 2. 执行以下命令，获取脚本帮助。
 
